# simple-storage-smart-contract-rust

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
contracts/: SimpleStorage.sol
src/: main.rs
