[package]
name = "simple-storage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.53"
once_cell = "1.9.0"
tokio = { version = "1.16.1", features = ["full"] }
ethers = { version = "0.6.2", features = ["abigen", "ledger"] }
serde_json = "1.0.78"
hex = "0.4.3"
bytes = "1.1.0"
